--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,27 +1,21 @@
 <!doctype html>
 <html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>{{ page.title }}</title>
+    <link href="/assets/css/style.css" rel="stylesheet" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>{{ page.title }}</title>
-  <link href="/assets/css/style.css" rel="stylesheet" />
-</head>
-
-<body>
-  <main class="container">
+  <body>
     <nav>
       <ul class="container">
-        <li><a href="/">Inicio</a></li>
-        <li><a href="/acerca-de">Acerca de</a></li>
-        <li><a href="/contacto">Contacto</a></li>
+        <li><a href="/">Home</a></li>
+        <li><a href="/blog">Blog</a></li>
       </ul>
     </nav>
-    <header>
-      <h1>{{ site.title }}</h1>
-    </header>
-    <section>{{ content }}</section>
-  </main>
-</body>
-
+    <main class="container">
+      <section>{{ content }}</section>
+    </main>
+  </body>
 </html>
