mejora de estilos

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,8 +4,12 @@ layout: default
 
 <header class="flex-col align-center text-center masthead">
   <div>
-    <img class="rounded-full avatar" style="width:60px;height: 60px;" src="https://avatars.githubusercontent.com/u/10008708?v=4" />
-    <h1 style="font-size: 1.4rem;margin-top:.6rem">Alejandro Amaral</h1>
+    <img
+      class="rounded-full avatar"
+      style="width: 60px; height: 60px"
+      src="https://avatars.githubusercontent.com/u/10008708?v=4"
+    />
+    <h1 style="font-size: 1.4rem; margin-top: 0.6rem">Alejandro Amaral</h1>
   </div>
 </header>
 
@@ -15,3 +19,23 @@ layout: default
 
   <article>{{content}}</article>
 </div>
+
+<footer>
+  <header class="flex-col align-center text-center masthead">
+    <div>
+      <h5
+        style="
+          margin-bottom: 0.5rem;
+          font-weight: 400;
+          text-transform: uppercase;
+        "
+      >
+        Acerca de Alejandro Amaral
+      </h5>
+      <p>
+        Analista de sistemas con más de 13 años de experiencia poniendo
+        productos digitales en producción 🚀
+      </p>
+    </div>
+  </header>
+</footer>
