--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,7 +11,7 @@ layout: default
   </div>
   <div>
     <p>
-    Hola, soy Alejandro (aka Jano), un analista de sistemas con más de 13 años de experiencia 
+    Hola, soy Alejandro (aka Jano), analista de sistemas con más de 13 años de experiencia 
     poniendo productos digitales en producción 🚀
     </p>
   </div>
