--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>{{ page.title }}</title>
+    {% include social-article-header.html %}
     <link href="/assets/css/style.css" rel="stylesheet" />
   </head>
 
@@ -11,7 +11,7 @@
     <nav>
       <ul class="container">
         <li><a href="/">Home</a></li>
-        <li><a href="/blog">Blog</a></li>
+        <li><a href="/about">Acerca</a></li>
       </ul>
     </nav>
     <main class="container">
