--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,7 +23,7 @@ layout: default
 <footer>
   <header class="flex-col align-center text-center masthead">
     <div>
-      <h5
+      <h4
         style="
           margin-bottom: 0.5rem;
           font-weight: 400;
@@ -31,10 +31,10 @@ layout: default
         "
       >
         Acerca de Alejandro Amaral
-      </h5>
+      </h4>
       <p>
         Analista de sistemas con más de 13 años de experiencia poniendo
-        productos digitales en producción 🚀
+        productos digitales en producción.
       </p>
     </div>
   </header>
