--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,7 +12,7 @@ layout: default
   <div>
     <p>
     Hola, soy Alejandro (aka Jano), analista de sistemas con más de 13 años de experiencia 
-    poniendo productos digitales en producción 🚀
+    poniendo productos digitales en producción.
     </p>
   </div>
 </header>
