--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,9 +3,9 @@ layout: default
 ---
 
 <header class="flex-col align-center text-center masthead">
-  <div>
+  <div clas="container text-red">
     <img class="rounded-full avatar" src="https://avatars.githubusercontent.com/u/10008708?v=4" />
-    <h1>
+    <h1 class="text-red font-mono">
       Alejandro Amaral
     </h1>
   </div>
