--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
     <link href="/assets/css/style.css" rel="stylesheet" />
   </head>
 
-  <body>
+  <body class="text-slate-900 dark:text-slate-100 bg-slate-50 dark:bg-gray-950">
     <div class="bg-background min-h-screen">
       <div class="container max-w-screen-lg mx-auto px-4 py-8">
         <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
