--- a/_includes/about.html
+++ b/_includes/about.html
@@ -11,13 +11,24 @@
   </div>
   <div class="mt-6">
     <p class="text-sm text-slate-500">
-      Hola, soy Alejandro (aka Jano), analista de sistemas con más de 13 años de experiencia
+      Hola, soy Alejandro (aka Jano), analista de sistemas con más de 15 años de experiencia
       poniendo productos digitales en producción.
     </p>
   </div>
   <div class="mt-6">
-    <a href="contact.html" class="bg-slate-950 w-full block text-center p-2
+    <a href="contact.html" class="bg-slate-950 w-full block text-center p-3
     rounded-md text-slate-50 uppercase font-bold text-sm dark:bg-slate-200
     dark:text-slate-900">Contacto</a>
+  </div>
+  <div class="mt-6">
+    <ul>
+      <li><a href="" class="flex flex-row gap-2 mb-1"><img src="/assets/images/github-icon.svg" style="filter: invert(100%);" class="w-5"
+            alt="">janoamaral</a></li>
+      <li><a href="" class="flex flex-row gap-2 mb-1"><img src="/assets/images/linkedin-icon.svg" style="filter: invert(100%);" class="w-5"
+            alt="">in/janoamaral</a></li>
+      <li><a href="" class="flex flex-row gap-2 mb-1"><img src="/assets/images/x-icon.svg" style="filter: invert(100%);"
+            class="w-5 text-blue-50" alt="">@logico_ar</a>
+      </li>
+    </ul>
   </div>
 </div>
