--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,16 +1,16 @@
-<div class="p-4 rounded-md">
-  <div class="pt-2">
+<div class="px-4 py-6  border-b border-slate-300 dark:border-slate-700">
+  <div>
     <div class="flex flex-row gap-4 items-center">
       <img src="https://avatars.githubusercontent.com/u/10008708?v=4"
         class="w-16 rounded-full border-2 border-slate-800 m-0 p-0" alt="avatar" />
       <div>
-        <h1 class="font-semibold text-xl">Alejandro Amaral</h1>
-        <h2 class="text-slate-500">System Analyst</h1>
+        <h1 class="font-semibold text-2xl -mb-1">Alejandro Amaral</h1>
+        <h2 class="font-light text-slate-400 text-lg lowercase">System Analyst</h1>
       </div>
     </div>
   </div>
   <div class="mt-6">
-    <p class="text-sm text-slate-500">
+    <p class="text-sm text-slate-700 dark:text-slate-400">
       Hola, soy Alejandro (aka Jano), analista de sistemas con más de 15 años de experiencia
       poniendo productos digitales en producción.
     </p>
@@ -22,12 +22,12 @@
   </div>
   <div class="mt-6">
     <ul>
-      <li><a href="" class="flex flex-row gap-2 mb-1"><img src="/assets/images/github-icon.svg" style="filter: invert(100%);" class="w-5"
-            alt="">janoamaral</a></li>
-      <li><a href="" class="flex flex-row gap-2 mb-1"><img src="/assets/images/linkedin-icon.svg" style="filter: invert(100%);" class="w-5"
-            alt="">in/janoamaral</a></li>
-      <li><a href="" class="flex flex-row gap-2 mb-1"><img src="/assets/images/x-icon.svg" style="filter: invert(100%);"
-            class="w-5 text-blue-50" alt="">@logico_ar</a>
+      <li><a href="" class="flex flex-row gap-2 mb-2"><img src="/assets/images/github-icon.svg"
+            style="filter: invert(70%);" class="w-5" alt="">janoamaral</a></li>
+      <li><a href="" class="flex flex-row gap-2 mb-2"><img src="/assets/images/linkedin-icon.svg"
+            style="filter: invert(70%);" class="w-5" alt="">in/janoamaral</a></li>
+      <li><a href="" class="flex flex-row gap-2 mb-2"><img src="/assets/images/x-icon.svg" style="filter: invert(70%);"
+            class="w-5" alt="">@logico_ar</a>
       </li>
     </ul>
   </div>
