--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,9 +1,9 @@
-<div class="px-4 py-6  border-b border-slate-300 dark:border-slate-700">
+<div class="px-6 py-6 border-b border-slate-300 dark:border-slate-700">
   <div>
-    <div class="flex flex-row gap-4 items-center">
+    <div class="flex flex-row gap-4 items-center md:flex-col">
       <img src="https://avatars.githubusercontent.com/u/10008708?v=4"
-        class="w-16 rounded-full border-2 border-slate-800 m-0 p-0" alt="avatar" />
-      <div>
+        class="w-16 rounded-full border-2 border-slate-800 m-0 p-0 md:w-full" alt="avatar" />
+      <div class="w-full">
         <h1 class="font-semibold text-2xl -mb-1">Alejandro Amaral</h1>
         <h2 class="font-light text-slate-400 text-lg lowercase">System Analyst</h1>
       </div>
@@ -22,12 +22,13 @@
   </div>
   <div class="mt-6">
     <ul>
-      <li><a href="" class="flex flex-row gap-2 mb-2"><img src="/assets/images/github-icon.svg"
-            style="filter: invert(70%);" class="w-5" alt="">janoamaral</a></li>
-      <li><a href="" class="flex flex-row gap-2 mb-2"><img src="/assets/images/linkedin-icon.svg"
-            style="filter: invert(70%);" class="w-5" alt="">in/janoamaral</a></li>
-      <li><a href="" class="flex flex-row gap-2 mb-2"><img src="/assets/images/x-icon.svg" style="filter: invert(70%);"
-            class="w-5" alt="">@logico_ar</a>
+      <li><a href="https://github.com/janoamaral" target="_blank" class="flex flex-row gap-2 mb-2"><img
+            src="/assets/images/github-icon.svg" class="w-5 icon" alt="">janoamaral</a></li>
+      <li><a href="https://www.linkedin.com/in/janoamaral/" class="flex flex-row gap-2 mb-2" target="_blank"><img
+            src="/assets/images/linkedin-icon.svg" class="w-5 icon" alt="">in/janoamaral</a>
+      </li>
+      <li><a href="https://x.com/logico_ar" class="flex flex-row gap-2 mb-2" target="_blank"><img
+            src="/assets/images/x-icon.svg" class="w-5 icon" alt="">@logico_ar</a>
       </li>
     </ul>
   </div>
