--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,8 +9,8 @@
 
   <body class="text-slate-900 dark:text-slate-100 bg-slate-50 dark:bg-gray-950">
     <div class="bg-background min-h-screen">
-      <div class="container max-w-screen-lg mx-auto px-4 py-8">
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+      <div class="container mx-auto px-4 py-8">
+        <div class="grid grid-cols-1 md:grid-cols-4 gap-6">
           <aside class="md:col-span-1 flex flex-col">
             {% include about.html %}
             <!-- {/* Profile Section */} -->
@@ -22,7 +22,7 @@
           <!-- <Sidebar /> -->
           <!-- {/* Main Section */} -->
           <main class="md:col-span-2">
-            <!-- <section>{{ content }}</section> -->
+            <section>{{ content }}</section>
             <!-- {/* About Me Section */} -->
             <!-- <AboutMe /> -->
             <!-- {/* Projects Section */} -->
