working about me

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -5,7 +5,7 @@
         class="w-16 rounded-full border-2 border-slate-800 m-0 p-0 md:w-full" alt="avatar" />
       <div class="w-full">
         <h1 class="font-semibold text-2xl -mb-1">Alejandro Amaral</h1>
-        <h2 class="font-light text-slate-400 text-lg lowercase">System Analyst</h1>
+        <h2 class="text-slate-500 text-lg lowercase">System Analyst</h1>
       </div>
     </div>
   </div>
