--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,9 +9,9 @@
 
   <body class="text-slate-900 dark:text-slate-100 bg-slate-50 dark:bg-gray-950">
     <div class="bg-background min-h-screen">
-      <div class="container mx-auto px-4 py-8">
+      <div class="container mx-auto px-2 py-8">
         <div class="grid grid-cols-1 md:grid-cols-4 gap-6">
-          <aside class="md:col-span-1 flex flex-col">
+          <aside class="md:col-span-1 flex flex-col order-last md:order-first">
             {% include about.html %}
             <!-- {/* Profile Section */} -->
             <!-- < Profile /> -->
@@ -21,14 +21,8 @@
           <!-- {/* (Profile and Skills) Sidebar Section */} -->
           <!-- <Sidebar /> -->
           <!-- {/* Main Section */} -->
-          <main class="md:col-span-2">
-            <section>{{ content }}</section>
-            <!-- {/* About Me Section */} -->
-            <!-- <AboutMe /> -->
-            <!-- {/* Projects Section */} -->
-            <!-- <Projects /> -->
-            <!-- {/* Experience Section */} -->
-            <!-- <Experience /> -->
+          <main class="md:col-span-3 pt-8 px-4">
+            {{ content }}
           </main>
         </div>
       </div>
