feat: new design

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -16,7 +16,7 @@
     </p>
   </div>
   <div class="mt-6">
-    <a href="contact.html" class="bg-slate-950 w-full block text-center p-3
+    <a href="/about" class="bg-slate-950 w-full block text-center p-3
     rounded-md text-slate-50 uppercase font-bold text-sm dark:bg-slate-200
     dark:text-slate-900">Contacto</a>
   </div>
