--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,8 +21,22 @@
           <!-- {/* (Profile and Skills) Sidebar Section */} -->
           <!-- <Sidebar /> -->
           <!-- {/* Main Section */} -->
-          <main class="md:col-span-3 pt-8 px-4">
+          <main class="md:col-span-3 px-4">
+            <nav class="sticky top-0 bg-slate-50 dark:bg-gray-950 py-4 px-6">
+              <ul class="flex flex-wrap gap-8">
+                <li>
+                  <a href="/" class="text-slate-700 font-bold
+                    dark:text-slate-200">Home</a>
+                </li>
+                <li>
+                  <a href="/about" class="text-slate-700 font-bold
+                    dark:text-slate-200">Acerca</a>
+                </li>
+              </ul>
+            </nav>
+            <div class="pt-8">
             {{ content }}
+            </div>
           </main>
         </div>
       </div>
