--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -26,7 +26,7 @@ layout: default
 <section class="pb-16 border-b md:border-b-0 dark:border-b-slate-700">
   {% for post in site.posts limit:5 %}
     <a class="p-4 block border rounded-md border-slate-300
-  dark:border-slate-800 overflow-hidden shadow-lg" href={{post.url}}>
+  dark:border-slate-800 overflow-hidden shadow-lg mb-4" href={{post.url}}>
       <div class="p-4">
         <small class="text-sm font-mono block">
           {{post.date | date: "%B %d, %Y"}}
