--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,8 +3,18 @@ layout: default
 ---
 
 <div class="post p-6">
-  <small class="text-center block">{{page.date | date: "%B %d, %Y"}}</small>
-  <h1 class="font-bold text-4xl mb-4 text-center">{{ page.title}}</h1>
+  <small class="">
+    {{page.date | date: "%B %d, %Y"}}
+  </small>
 
-  <article class="mt-8 article">{{content}}</article>
+  <h1 class="font-semibold text-4xl mb-2 mt-2">
+    {{ page.title}}
+  </h1>
+  <p class="text-slate-500 text-2xl">
+    {{ page.intro}}
+  </p>
+
+  <article class="mt-8 article">
+    {{content}}
+  </article>
 </div>
