--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,5 @@
 ---
----
-
+--- 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -466,6 +465,7 @@
   overflow-y: auto;
   padding: 1rem;
   margin: 2rem 0;
+  border: 1px solid rgb(22, 27, 34);
 }
 
 .article h1,
@@ -474,10 +474,62 @@
 .article h4,
 .article h5,
 .article h6 {
-  font-weight: bold;
+  font-weight: 600;
   padding-top: 2rem;
   padding-bottom: 0.5rem;
   margin-top: 0;
   margin-bottom: 2rem;
   border-bottom: 1px solid #cbd5e1;
+}
+
+.article h1 {
+  font-size: 2.25rem;
+}
+
+.article h2 {
+  font-size: 1.75rem;
+}
+
+.article h3 {
+  font-size: 1.5rem;
+}
+
+.article h4 {
+  font-size: 1.25rem;
+}
+
+.article h5 {
+  font-size: 1rem;
+}
+
+.article h6 {
+  font-size: 0.75rem;
+}
+
+.article ul {
+  list-style-type: disc;
+  padding-left: 2rem;
+}
+.article ul ul {
+  list-style-type: circle;
+}
+
+.article ol {
+  list-style-type: decimal;
+  padding-left: 2rem;
+}
+
+.article blockquote {
+  border-left: 4px solid #7aa2f7;
+  padding: 1rem;
+  margin: 2rem 0;
+}
+
+.article blockquote p {
+  margin: 0;
+}
+
+.article img {
+  max-width: 100%;
+  height: auto;
 }
