--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,16 +21,17 @@
           <!-- {/* (Profile and Skills) Sidebar Section */} -->
           <!-- <Sidebar /> -->
           <!-- {/* Main Section */} -->
-          <main class="md:col-span-3 px-4">
-            <nav class="sticky top-0 bg-slate-50 dark:bg-gray-950 py-4 px-6">
-              <ul class="flex flex-wrap gap-8">
+          <main class="md:col-span-3 px-2">
+            <nav class="sticky top-0 bg-slate-50 dark:bg-gray-950 py-4 border-b
+              border-b-slate-300 dark:border-b-slate-800 -mt-4">
+              <ul class="flex gap-8 justify-center flex-row-reverse md:flex-row">
                 <li>
                   <a href="/" class="text-slate-700 font-bold
-                    dark:text-slate-200">Home</a>
+                    dark:text-slate-200 px-4 py-4">Home</a>
                 </li>
                 <li>
                   <a href="/about" class="text-slate-700 font-bold
-                    dark:text-slate-200">Acerca</a>
+                    dark:text-slate-200 px-4 py-4">Acerca</a>
                 </li>
               </ul>
             </nav>
