--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div class="post p-6">
+<div class="post py-6">
   <small class="">
     {{page.date | date: "%B %d, %Y"}}
   </small>
