feat: improved style

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -5,20 +5,20 @@
         class="w-16 rounded-full border-2 border-slate-800 m-0 p-0 md:w-full" alt="avatar" />
       <div class="w-full">
         <h1 class="font-semibold text-2xl -mb-1">Alejandro Amaral</h1>
-        <h2 class="text-slate-500 text-lg lowercase">System Analyst</h1>
+        <h2 class="text-slate-500 font-light text-xl lowercase">System Analyst</h1>
       </div>
     </div>
   </div>
   <div class="mt-6">
-    <p class="text-sm text-slate-700 dark:text-slate-400">
+    <p class="text-md text-slate-700 dark:text-slate-400">
       Hola, soy Alejandro (aka Jano), analista de sistemas con más de 15 años de experiencia
       poniendo productos digitales en producción.
     </p>
   </div>
   <div class="mt-6">
-    <a href="/about" class="bg-slate-950 w-full block text-center p-3
-    rounded-md text-slate-50 uppercase font-bold text-sm dark:bg-slate-200
-    dark:text-slate-900">Contacto</a>
+    <a href="/about" class="bg-slate-450 w-full block text-center p-2
+    rounded-md text-slate-950 font-semibold border border-slate-300 text-sm dark:bg-slate-900
+    dark:text-slate-100 dark:border-slate-500">Contacto</a>
   </div>
   <div class="mt-6">
     <ul>
