--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 ---
 --- 
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -501,6 +502,7 @@
   list-style-type: disc;
   padding-left: 2rem;
 }
+
 .article ul ul {
   list-style-type: circle;
 }
@@ -568,3 +570,48 @@
   }
 }
 
+.article .premonition > .content {
+  border-left: 3px solid rgb(47, 129, 247);
+  padding: 0.5rem 1.2rem;
+  margin: 2rem 0;
+}
+.article .premonition > .content > p {
+  margin: 0rem;
+}
+.article .premonition > .content > .header {
+  margin-bottom: 0.5rem;
+}
+
+.article .premonition.note > .content > .header {
+  color : rgb(68, 147, 248);
+}
+.article .premonition.note > .content {
+  border-left-color: rgb(47, 129, 247);
+}
+.article .premonition.info > .content {
+  border-left-color: rgb(35, 134, 54);
+}
+
+.article .premonition.info > .content > .header {
+  color : rgb(63, 185, 80);
+}
+
+.article .premonition.info > .content {
+  border-left-color: rgb(35, 134, 54);
+}
+
+.article .premonition.warning > .content > .header {
+  color : rgb(210, 153, 34);
+}
+
+.article .premonition.warning > .content {
+  border-left-color: rgb(210, 153, 34);
+}
+
+.article .premonition.error > .content {
+  border-left-color: rgb(248, 81, 73);
+}
+
+.article .premonition.error > .content > .header {
+  color : rgb(248, 81, 73);
+}
