feat: working TOC

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -35,7 +35,7 @@ layout: default
           {{post.title}}
         </h2>
         <p class="mt-4 text-slate-50">
-          {{post.excerpt | truncatewords: 40 | truncate: 450}}
+          {{post.intro | truncatewords: 40 | truncate: 450}}
         </p>
         <span class="font-bold text-base mt-4 block">Leer más</span>
       </div>
