--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,23 +3,31 @@ layout: default
 ---
 
 <div class="flex flex-row py-6">
-      <div class="post {% if page.toc == true %}w-9/12{% else %}w-full{% endif %}">
+      <div class="post w-full {% if page.toc == true %}md:w-9/12{% else %}md:w-full{% endif %}">
         <small class="">
           {{page.date | date: "%B %d, %Y"}}
         </small>
         <h1 class="font-semibold text-4xl mt-2 mb-4">
           {{ page.title}}
         </h1>
-      <article class="article">
         <p class="text-slate-500 text-2xl">
           {{ page.intro}}
         </p>
+
+        {% if page.toc == true %}
+          <div class="block md:hidden text-sm py-8 mb-8 pl-4 border-b border-b-slate-600">
+            <h5 class="font-bold mb-4">En este artículo</h5>
+              {% toc %}
+          </div>
+        {% endif %}
+
+      <article class="article">
         {{content}}
       </article>
     </div>
 
     {% if page.toc == true %}
-      <div class="w-3/12 text-sm pl-10">
+      <div class="hidden md:block md:w-3/12 text-sm pl-10">
         <div class="pt-4 sticky top-20">
         <h5 class="font-bold mb-4">En este artículo</h5>
           {% toc %}
