--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,19 +2,36 @@
 layout: default
 ---
 
-<div class="post py-6">
-  <small class="">
-    {{page.date | date: "%B %d, %Y"}}
-  </small>
+<div class="flex flex-row py-6">
+      <div class="post w-full {% if page.toc == true %}md:w-9/12{% else %}md:w-full{% endif %}">
+        <small class="">
+          {{page.date | date: "%B %d, %Y"}}
+        </small>
+        <h1 class="font-semibold text-4xl mt-2 mb-4">
+          {{ page.title}}
+        </h1>
+        <p class="text-slate-500 text-2xl">
+          {{ page.intro}}
+        </p>
 
-  <h1 class="font-semibold text-4xl mb-2 mt-2">
-    {{ page.title}}
-  </h1>
-  <p class="text-slate-500 text-2xl">
-    {{ page.intro}}
-  </p>
+        {% if page.toc == true %}
+          <div class="block md:hidden text-sm py-8 mb-8 pl-4 border-b border-b-slate-600">
+            <h5 class="font-bold mb-4">En este artículo</h5>
+              {% toc %}
+          </div>
+        {% endif %}
 
-  <article class="mt-8 article">
-    {{content}}
-  </article>
+      <article class="article">
+        {{content}}
+      </article>
+    </div>
+
+    {% if page.toc == true %}
+      <div class="hidden md:block md:w-3/12 text-sm pl-10">
+        <div class="pt-4 sticky top-20">
+        <h5 class="font-bold mb-4">En este artículo</h5>
+          {% toc %}
+        </div>
+      </div>
+    {% endif %}
 </div>
