--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -475,27 +475,27 @@
 }
 
 .article h1 {
-  font-size: 2.25rem;
+  font-size: 2.0rem;
 }
 
 .article h2 {
-  font-size: 1.75rem;
-}
-
-.article h3 {
   font-size: 1.5rem;
 }
 
-.article h4 {
+.article h3 {
   font-size: 1.25rem;
 }
 
-.article h5 {
+.article h4 {
   font-size: 1rem;
 }
 
-.article h6 {
+.article h5 {
   font-size: 0.75rem;
+}
+
+.article h6 {
+  font-size: 0.5rem;
 }
 
 .article ul {
@@ -658,4 +658,8 @@
 
 .article .premonition.important>.content {
   border-left-color: rgb(171, 125, 248);
+}
+
+#toc li {
+  margin-bottom: .5rem;
 }
