--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,7 +1,7 @@
 <div class="px-6 py-6 border-b border-slate-300 dark:border-slate-700">
   <div>
     <div class="flex flex-row gap-4 items-center md:flex-col">
-      <img src="https://avatars.githubusercontent.com/u/10008708?v=4"
+      <img width="200" height="200" src="https://avatars.githubusercontent.com/u/10008708?v=4"
         class="w-16 rounded-full border-2 border-slate-800 m-0 p-0 md:w-full" alt="avatar" />
       <div class="w-full">
         <h1 class="font-semibold text-2xl -mb-1">Alejandro Amaral</h1>
