--- a/_includes/social-article-header.html
+++ b/_includes/social-article-header.html
@@ -1,19 +1,19 @@
 <title>{{ page.title }} | Alejandro Amaral</title>
 <meta
   name="description"
-  content="{{page.excerpt | strip_html | truncatewords: 40 | truncate: 60}}"
+  content="{{page.intro | strip_html | truncatewords: 40 | truncate: 60}}"
 />
 <meta
   itemprop="description"
-  content="{{page.excerpt | strip_html | truncatewords: 40 | truncate: 60}}"
+  content="{{page.intro | strip_html | truncatewords: 40 | truncate: 60}}"
 />
 <meta
   name="twitter:description"
-  content="{{page.excerpt | strip_html | truncatewords: 40 | truncate: 60}}"
+  content="{{page.intro | strip_html | truncatewords: 40 | truncate: 60}}"
 />
 <meta
   property="og:description"
-  content="{{page.excerpt | strip_html | truncatewords: 40 | truncate: 60}}"
+  content="{{page.intro | strip_html | truncatewords: 40 | truncate: 60}}"
 />
 
 <link rel="canonical" href="{{ site.url }}{{ page.url }}" />
