--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -315,7 +315,7 @@
 
 /* Literal String Double */
 .highlight .s2 {
-  color: transparent;
+  color: #9ece6a;
   background-color: transparent;
 }
 
