--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,5 @@
 ---
 --- 
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -675,7 +674,33 @@
 
 .lazy-youtube-embed {
   background: none !important;
+  display: block;
+  width: auto;
+  height: auto;
+  padding: 0;
+  margin: 0;
+  position: relative;
 }
+.lazy-youtube-embed img {
+  width:100%;
+  height: auto !important;
+  padding: 0;
+  margin: 0;
+}
+.lazy-youtube-embed .ytlight__play {
+  position: absolute;
+  width: 60px;
+  left: calc(50% - 30px);
+  top: 50%;
+  filter: brightness(120%) ;
+  filter: grayscale(100%) ;
+}
+
+.lazy-youtube-embed:hover .ytlight__play {
+  filter: brightness(100%) ;
+  filter: grayscale(0%) ;
+}
+
 .lazy-youtube-embed iframe {
   border-radius: 8px;
 }
