feat: added ghostty post (#7)

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/lazy-youtube-embed@1.0.0/dist/lazy-youtube-embed.js" defer></script>
 
 <div class="flex flex-row py-6">
       <div class="post w-full {% if page.toc == true %}md:w-9/12{% else %}md:w-full{% endif %}">
@@ -35,3 +36,4 @@ layout: default
       </div>
     {% endif %}
 </div>
+
