feat: added matomo analytics

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,18 @@
     {% include social-article-header.html %}
     <link href="/assets/css/style.css" rel="stylesheet" />
   </head>
+  <script>
+    var _paq = window._paq = window._paq || [];
+    _paq.push(['trackPageView']);
+    _paq.push(['enableLinkTracking']);
+    (function() {
+      var u="//m.logico.com.ar/";
+      _paq.push(['setTrackerUrl', u+'matomo.php']);
+      _paq.push(['setSiteId', '4']);
+      var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+      g.async=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
+    })();
+  </script>
 
   <body class="text-slate-900 dark:text-slate-100 bg-slate-50 dark:bg-gray-950">
     <div class="bg-background min-h-screen">
