--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,6 +15,13 @@ layout: default
           {{ page.intro}}
         </p>
 
+        {% if page.hero %}
+        <div class="w-full mt-8 mb-16">
+            <img class="w-full h-96 object-cover rounded-xl"
+            src=/assets/images/blog{{page.hero}} />
+        </div>
+        {% endif %}
+
         {% if page.toc == true %}
           <div class="block md:hidden text-sm py-8 mb-8 pl-4 border-b border-b-slate-600">
             <h5 class="font-bold mb-4">En este artículo</h5>
