inicio del post

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,7 +18,8 @@ layout: default
         {% if page.hero %}
         <div class="w-full mt-8 mb-16">
             <img class="w-full h-96 object-cover rounded-xl"
-            src=/assets/images/blog{{page.hero}} />
+            src=/assets/images/blog{{page.hero}} 
+                 alt="{{page.title}}"/>
         </div>
         {% endif %}
 
